--- a/raccolta.html
+++ b/raccolta.html
@@ -330,7 +330,9 @@ footer a {
         display: none !important;
     }
 
- 
+ .contact-url {
+    font-size: 24px;
+  }
 
      
 }
@@ -520,13 +522,10 @@ a:hover {
     </div>
 
             <div class="bg-white shadow-md rounded-lg p-6 mb-6">
-                <h2 class="text-2xl font-semibold mb-4" style="color: #970a2c;">Cooperativa Assistenza e Territorio</h2>
-                <p class="mb-2">
-                    <strong>Contatti:</strong> 
-                    <a href="https://www.assistenza-territorio.it/contatti/" title="https://www.assistenza-territorio.it/contatti/" target="_blank">Sito Web</a>
-                </p>
-                <p><strong>Email:</strong> info@assistenza-territorio.it</p>
-            </div>
+  <h2 class="text-2xl font-semibold mb-4" style="color: #970a2c;">Cooperativa Assistenza e Territorio</h2>
+  <p class="mb-2"><strong>Contatti: </strong><a href="https://www.assistenza-territorio.it/contatti/" class="contact-url" title="https://www.assistenza-territorio.it/contatti/" target="_blank">https://www.assistenza-territorio.it/contatti/</a></p>
+  <p><strong>Email:</strong> info@assistenza-territorio.it</p>
+</div>
 
             <div class="bg-white shadow-md rounded-lg p-6 mb-6">
                 <h2 class="text-2xl font-semibold mb-4" style="color: #970a2c;">Gruppo Facebook "La cultura non è spazzatura"</h2>
@@ -537,27 +536,19 @@ a:hover {
                 </p>
             </div>
 
-            <div class="bg-white shadow-md rounded-lg p-6 mb-6">
-                <h2 class="text-2xl font-semibold mb-4" style="color: #970a2c;">Centro di Raccolta Chiesa San Carlo da Sezze</h2>
-                <p class="mb-2"><strong>Ubicazione:</strong> Acilia, via Macchia Saponara</p>
-                <p>
-                    <strong>Contatti:</strong> 
-                    <a href="https://sancarlods.it/pages/index.php" title="https://sancarlods.it/pages/index.php" target="_blank">Sito Web</a>
-                    <br>
-                    <strong>Telefono:</strong> 06-52.12.470
-                </p>
-            </div>
+           <div class="bg-white shadow-md rounded-lg p-6 mb-6">
+  <h2 class="text-2xl font-semibold mb-4" style="color: #970a2c;">Centro di Raccolta Chiesa San Carlo da Sezze</h2>
+  <p class="mb-2"><strong>Ubicazione:</strong> Acilia, via Macchia Saponara</p>
+  <p><strong>Contatti: </strong><a href="https://sancarlods.it/pages/index.php" class="contact-url" title="https://sancarlods.it/pages/index.php" target="_blank">https://sancarlods.it/pages/index.php</a><br>
+  <strong>Telefono:</strong> 06-52.12.470 </p>
+</div>
 
             <div class="bg-white shadow-md rounded-lg p-6 mb-6">
-                <h2 class="text-2xl font-semibold mb-4" style="color: #970a2c;">Centro Sociale Polivalente e Biblioteca</h2>
-                <p class="mb-2"><strong>Ubicazione:</strong> Casal Palocco, Viale Gorgia di Leontini, 171</p>
-                <p>
-                    <strong>Contatti:</strong> 
-                    <a href="https://www.csp-palocco.it/chi-siamo/chi-siamo" title="https://www.csp-palocco.it/chi-siamo/chi-siamo" target="_blank">Sito Web</a>
-                    <br>
-                    <strong>Email:</strong> info@csp-palocco.it
-                </p>
-            </div>
+  <h2 class="text-2xl font-semibold mb-4" style="color: #970a2c;">Centro Sociale Polivalente e Biblioteca</h2>
+  <p class="mb-2"><strong>Ubicazione:</strong> Casal Palocco, Viale Gorgia di Leontini, 171</p>
+  <p><strong>Contatti: </strong><a href="https://www.csp-palocco.it/chi-siamo/chi-siamo" class="contact-url" title="https://www.csp-palocco.it/chi-siamo/chi-siamo" target="_blank">https://www.csp-palocco.it/chi-siamo/chi-siamo</a><br>
+  <strong>Email:</strong> info@csp-palocco.it </p>
+</div>
 
             <div class="bg-white shadow-md rounded-lg p-6">
                 <h2 class="text-2xl font-semibold mb-4" style="color: #970a2c;">Punti di Bookcrossing</h2>
