--- a/raccolta.html
+++ b/raccolta.html
@@ -526,13 +526,13 @@ a:hover {
     </div>
 
             <div class="bg-white shadow-md rounded-lg p-6 mb-6">
-                <h2 class="text-2xl font-semibold mb-4" style="color: #970a2c;">Cooperativa Assistenza e Territorio</h2>
-                <p class="mb-2">
-                    <strong>Contatti:</strong> 
-                    <a href="https://www.assistenza-territorio.it/contatti/" class="contact-link" title="https://www.assistenza-territorio.it/contatti/" target="_blank"><span class="contact-text">Sito Web</a>
-                </p>
-                <p><strong>Email:</strong> info@assistenza-territorio.it</p>
-            </div>
+    <h2 class="text-2xl font-semibold mb-4" style="color: #970a2c;">Cooperativa Assistenza e Territorio</h2>
+    <p class="mb-2">
+        <strong>Contatti:</strong> 
+        <a href="https://www.assistenza-territorio.it/contatti/" class="contact-link" title="https://www.assistenza-territorio.it/contatti/" target="_blank"><span class="contact-text">Sito Web</span></a>
+    </p>
+    <p><strong>Email:</strong> info@assistenza-territorio.it</p>
+</div>
 
             <div class="bg-white shadow-md rounded-lg p-6 mb-6">
                 <h2 class="text-2xl font-semibold mb-4" style="color: #970a2c;">Gruppo Facebook "La cultura non è spazzatura"</h2>
