--- a/raccolta.html
+++ b/raccolta.html
@@ -330,14 +330,16 @@ footer a {
         display: none !important;
     }
 
-   .contact-link::before {
+  .contact-link::before {
     content: attr(href);
     font-size: 24px;
+  }
+  .contact-link::after {
+    content: " (" attr(href) ")";
   }
   .contact-text {
     display: none;
   }
-
      
 }
         
@@ -525,7 +527,7 @@ a:hover {
         <h1 class="text-3xl font-bold text-left" style="color: #970a2c;">Centri di Raccolta per Donazione Libri e Audiovisivi</h1>
     </div>
 
-            <div class="bg-white shadow-md rounded-lg p-6 mb-6">
+<div class="bg-white shadow-md rounded-lg p-6 mb-6">
     <h2 class="text-2xl font-semibold mb-4" style="color: #970a2c;">Cooperativa Assistenza e Territorio</h2>
     <p class="mb-2">
         <strong>Contatti:</strong> 
