--- a/raccolta.html
+++ b/raccolta.html
@@ -316,7 +316,7 @@ footer a {
     }
     a[href]::after {
         content: " (" attr(href) ")";
-        font-size: 8pt;
+        font-size: 10pt;  /* Modifica la dimensione del font dell'URL */
         font-style: italic;
     }
     a[href^="https://www.bibliotechediroma.it"]::after,
