--- a/termini.html
+++ b/termini.html
@@ -30,6 +30,8 @@
        }
        
        body {
+
+          font-weight: 500; /* Imposta il peso del font a 500 */
            background-color: var(--bg);
            color: var(--text);
            font-family: 'Space Grotesk', sans-serif;
