--- a/index.html
+++ b/index.html
@@ -36,10 +36,11 @@ input[type="email"],
 input[type="tel"],
 input[type="number"],
 textarea,
-select {
-    border-radius: 0.5rem !important;  /* Bordi leggermente arrotondati */
-    transition: all 0.2s ease-in-out !important;
-}
+select,
+    button {
+      font-family: 'Space Grotesk', sans-serif;
+      font-weight: 500;
+    }
 /* Stile per il focus */
 input[type="text"]:focus,
 input[type="email"]:focus,
