--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
     
     <style>
 
-
+ /* Global font settings */
+    body {
+      font-family: 'Space Grotesk', sans-serif;
+      font-weight: 500;
+    }
         
 :root {
     --primary: #970a2c;    /* amaranto */
@@ -36,11 +40,10 @@ input[type="email"],
 input[type="tel"],
 input[type="number"],
 textarea,
-select,
-    button {
-      font-family: 'Space Grotesk', sans-serif;
-      font-weight: 500;
-    }
+select {
+    border-radius: 0.5rem !important;  /* Bordi leggermente arrotondati */
+    transition: all 0.2s ease-in-out !important;
+}
 /* Stile per il focus */
 input[type="text"]:focus,
 input[type="email"]:focus,
