--- a/raccolta.html
+++ b/raccolta.html
@@ -596,13 +596,23 @@ a:hover {
                     <i class="fas fa-phone w-4"></i>
                     <span>06 4546 0481 / 0483</span>
                 </div>
-                <div class="flex items-center space-x-2">
-                    <i class="fas fa-clock w-4"></i>
-                    <span class="flex flex-col">
-                        <span>Lunedì-Venerdì 09:00-18:30</span>
-                        <span>Sabato 09:00-13:00</span>
-                    </span>
-                </div>
+                
+
+
+<div class="flex items-center space-x-2">
+    <i class="fas fa-clock w-4"></i>
+    <span class="flex flex-col">
+        <span>Lunedì-Venerdì 09:00-18:30</span>
+        <span><a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2" target="_blank">Sabato 09:00-13:00</a></span>
+    </span>
+</div>
+
+
+
+
+
+
+                
             </div>
         </div>
     </div>
