--- a/raccolta.html
+++ b/raccolta.html
@@ -18,6 +18,10 @@
     --primary: #970a2c;
 }
 
+html {
+  scroll-behavior: smooth;
+  scroll-padding-top: 140px; /* Adjust this value based on your header height */
+}
 
 
  * {
