--- a/raccolta.html
+++ b/raccolta.html
@@ -607,15 +607,13 @@ a:hover {
             <span>Lunedì-Venerdì 09:00-18:30</span>
          
               
-              <span>
+         <span>
   <a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2#where_openings" onclick="delayedScroll(event)">Scroll to Target</a>
 </span>
-
 
 <script>
   function delayedScroll(event) {
     event.preventDefault(); // Ferma il comportamento predefinito del link
-
     const targetURL = "https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2#where_openings";
     const currentURL = window.location.href.split("#")[0];
 
@@ -623,12 +621,9 @@ a:hover {
       // Scroll nella stessa pagina
       const target = document.getElementById("where_openings");
       if (target) {
-        setTimeout(() => {
-          window.scrollTo({
-            top: target.getBoundingClientRect().top + window.scrollY - 140,
-            behavior: "smooth",
-          });
-        }, 300);
+        // Usa `scrollIntoView` per scroll fluido
+        target.scrollIntoView({ behavior: "smooth", block: "start" });
+        window.history.pushState(null, "", "#where_openings"); // Aggiorna l'hash senza saltare
       }
     } else {
       // Naviga alla nuova pagina
