--- a/raccolta.html
+++ b/raccolta.html
@@ -607,7 +607,9 @@ a:hover {
             <span>Lunedì-Venerdì 09:00-18:30</span>
          
               
-
+<span>
+  <a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2#where_openings" onclick="delayedScroll(event)">Scroll to Target</a>
+</span>
 
 <script>
   function delayedScroll(event) {
