--- a/raccolta.html
+++ b/raccolta.html
@@ -611,33 +611,33 @@ a:hover {
   <a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2#where_openings" onclick="delayedScroll(event)">Scroll to Target</a>
 </span>
 
- <script>
-        // Funzione per il delayed scroll
-        function delayedScroll(event) {
-            event.preventDefault();  // Previeni l'azione predefinita del link
+<script>
+    // Funzione per il delayed scroll
+    function delayedScroll(event) {
+        event.preventDefault();  // Previeni l'azione predefinita del link
 
-            // Ottieni l'elemento di destinazione
-            const target = document.getElementById("where_openings");
+        // Ottieni l'elemento di destinazione
+        const target = document.getElementById("where_openings");
 
-            if (target) {
-                // Calcola la posizione dell'elemento
-                const targetPosition = target.getBoundingClientRect().top + window.scrollY;
+        if (target) {
+            // Calcola la posizione dell'elemento
+            const targetPosition = target.getBoundingClientRect().top + window.scrollY - 140;
+            console.log('Posizione target:', targetPosition);  // Log per verificare la posizione calcolata
 
-                console.log('Posizione target:', targetPosition);
-
-                // Esegui lo scroll con un ritardo di 300 ms
-                setTimeout(() => {
-                    console.log('Eseguendo scroll alla posizione:', targetPosition);
-                    window.scrollTo({
-                        top: targetPosition,
-                        behavior: "smooth",
-                    });
-                }, 300);
-            } else {
-                console.log('Target non trovato');
-            }
+            // Esegui lo scroll con un ritardo di 1000 ms (1 secondo)
+            setTimeout(() => {
+                console.log('Eseguendo scroll alla posizione:', targetPosition);
+                window.scrollTo({
+                    top: targetPosition,
+                    behavior: "smooth",
+                });
+            }, 1000);
+        } else {
+            console.log('Target non trovato');
         }
-    </script>
+    }
+</script>
+
 
 
 
