--- a/raccolta.html
+++ b/raccolta.html
@@ -574,41 +574,57 @@ a:hover {
 
 
 <footer class="bg-[#970a2c] text-white mt-16 py-8">
-  <div class="container mx-auto px-4 md:px-6 flex flex-col md:flex-row items-center justify-between">
-    <div class="mb-4 md:mb-0">
-      <img src="footermorante.png" alt="Logo Biblioteca Morante" class="h-8 md:h-10"
-           style="cursor: pointer;"
-           onclick="window.open('https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2', '_blank');">
-    </div>
-
-    <div class="flex flex-col md:flex-row md:space-x-8 space-y-2 md:space-y-0 text-center md:text-left text-sm">
-      <div class="flex items-center justify-center md:justify-start space-x-2">
-        <i class="fas fa-location-dot w-4"></i>
-        <span class="flex flex-col">
-          <span>Via Adolfo Cozza 7</span>
-          <span>Municipio X, 00121 Roma</span>
-        </span>
-      </div>
-
-      <div class="flex items-center justify-center md:justify-start space-x-4">
-        <div class="flex items-center space-x-2">
-          <i class="fas fa-phone w-4"></i>
-          <span>06 4546 0481 / 0483</span>
+    <div class="container mx-auto px-4 md:px-6 flex flex-col md:flex-row items-center justify-between">
+        <div class="mb-4 md:mb-0">
+            <img src="footermorante.png" alt="Logo Biblioteca Morante" class="h-8 md:h-10"
+                style="cursor: pointer;"
+                onclick="window.open('https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2', '_blank');">
         </div>
-
-        <div class="flex items-center space-x-2">
-          <i class="fas fa-clock w-4"></i>
-          <span class="flex flex-col">
-            <!-- Link con ancoraggio alla sezione degli orari -->
-            <a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2#where_openings" target="_blank">
-              Lunedì-Venerdì 09:00-18:30
-            </a>
-          </span>
+        
+        <div class="flex flex-col md:flex-row md:space-x-8 space-y-2 md:space-y-0 text-center md:text-left text-sm">
+            <div class="flex items-center justify-center md:justify-start space-x-2">
+                <i class="fas fa-location-dot w-4"></i>
+                <span class="flex flex-col">
+                    <span>Via Adolfo Cozza 7</span>
+                    <span>Municipio X, 00121 Roma</span>
+                </span>
+            </div>
+            
+            <div class="flex items-center justify-center md:justify-start space-x-4">
+                <div class="flex items-center space-x-2">
+                    <i class="fas fa-phone w-4"></i>
+                    <span>06 4546 0481 / 0483</span>
+                </div>
+                <div class="flex items-center space-x-2">
+                    <i class="fas fa-clock w-4"></i>
+                    <span class="flex flex-col">
+                        <a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2#where_openings" 
+                           target="_blank" onclick="scrollToTarget()">Lunedì-Venerdì 09:00-18:30</a>
+                    </span>
+                </div>
+            </div>
         </div>
-      </div>
     </div>
-  </div>
 </footer>
+
+<!-- Script per eseguire lo scroll quando la pagina è caricata -->
+<script>
+    function scrollToTarget() {
+        setTimeout(function() {
+            // Questo codice esegue lo scroll alla sezione specifica della pagina target
+            const target = document.getElementById('where_openings');
+            if (target) {
+                const targetPosition = target.getBoundingClientRect().top + window.scrollY - 140;
+                window.scrollTo({
+                    top: targetPosition,
+                    behavior: 'smooth'
+                });
+            } else {
+                console.log("Elemento target non trovato");
+            }
+        }, 2000); // Ritardo di 1 secondo per assicurarsi che la pagina sia completamente caricata
+    }
+</script>
 
 
 
