--- a/raccolta.html
+++ b/raccolta.html
@@ -599,7 +599,8 @@ a:hover {
                 <div class="flex items-center space-x-2">
                     <i class="fas fa-clock w-4"></i>
                     <span class="flex flex-col">
-                        <a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2" 
+                        <!-- Ancoraggio verso la sezione della pagina target -->
+                        <a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2#where_infobib" 
                            target="_blank" 
                            id="work-hours-link">
                             Lunedì-Venerdì 09:00-18:30
@@ -613,7 +614,6 @@ a:hover {
 
 <!-- Aggiungi il blocco JavaScript per nascondere il bottone "Torna su" -->
 <script>
-    // Esegui il codice quando il DOM è pronto
     document.addEventListener("DOMContentLoaded", function() {
         // Verifica la presenza del bottone "Torna su" ogni 100ms
         const intervalId = setInterval(function() {
@@ -628,6 +628,7 @@ a:hover {
         }, 100); // Controlla ogni 100 millisecondi
     });
 </script>
+
 
 
 
